--- a/website/assets/style.css
+++ b/website/assets/style.css
@@ -6,8 +6,13 @@
 	font-weight: 300;	 
 	overflow: -moz-scrollbars-vertical;
 	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
+.incorrect{
+	color: red;
+	font-weight: bold;
+}
 
 body {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -54,10 +59,10 @@ body {
 	 transform: translateY(85px);
 }
  .container {
-	max-width: 600px;
-	margin: 0 auto;
-	padding: 80px 0;
-	height: 400px;
+	max-width: 600px !important;
+	width: auto !important;
+	margin: 0 auto !important;
+	padding: 80px 0 !important;
 	text-align: center;
 	z-index: 1;	 
 }
@@ -70,10 +75,14 @@ body {
 .hidden{
 	display: none;
 }
+.logged-in{
+	line-height: normal;
+}
  form {
 	 padding: 20px 0;
 	 position: relative;
 	 z-index: 2;
+	 max-width: 250px;
 }
  form input {
 	 display: block;
@@ -84,7 +93,7 @@ body {
 	 width: 250px;
 	 border-radius: 3px;
 	 padding: 10px 15px;
-	 margin: 0 auto 10px auto;
+	 margin: 0 0 10px 0;
 	 text-align: center;
 	 font-size: 18px;
 	 color: white;
@@ -92,27 +101,35 @@ body {
 	 font-weight: 300;
 }
  form input:hover {
-	 background-color: rgba(255,255,255,0.4);
+	background-color: rgba(255,255,255,0.4);
 }
  form input:focus {
-	 background-color: white;
-	 color: #53e3a6;
+	background-color: white;
+	color: #53e3a6;
 }
- form button {
-	 appearance: none;
-	 outline: 0;
-	 background-color: white;
-	 border: 0;
-	 padding: 10px 15px;
-	 color: #53e3a6;
-	 border-radius: 3px;
-	 width: 250px;
-	 cursor: pointer;
-	 font-size: 18px;
-	 transition-duration: 0.25s;
+.checkbox:focus, .checkbox:hover, .checkbox{
+	background-color: transparent !important;
 }
- form button:hover {
+ form #login-button, form #register-button {
+	appearance: none;
+	outline: 0;
+	background-color: white;
+	border: 0;
+	padding: 10px 15px;
+	color: #53e3a6;
+	border-radius: 3px;
+	width: 250px;
+	cursor: pointer;
+	font-size: 18px;
+	font-weight: 600;
+	transition-duration: 0.25s;
+}
+ form #login-button:hover, form #register-button:hover {
 	 background-color: #f5f7f9;
+}
+.checkbox{
+	appearance: checkbox;
+	width: auto;
 }
  .bg-bubbles {
 	 position: absolute;
@@ -127,9 +144,9 @@ body {
 	 list-style: none;
 	 display: block;
 	 width: 40px;
-	 height: 40px;
+	 height: 69px;
 	 background-color: rgba(255,255,255,0.15);
-	 bottom: -160px;
+	 bottom: -20px;
 	 -webkit-animation: square 25s infinite;
 	 animation: square 25s infinite;
 	 -webkit-transition-timing-function: linear;
@@ -141,18 +158,17 @@ body {
  .bg-bubbles li:nth-child(2) {
 	 left: 20%;
 	 width: 80px;
-	 height: 80px;
-	 animation-delay: 2s;
+	 height: 110px;
 	 animation-duration: 17s;
 }
  .bg-bubbles li:nth-child(3) {
 	 left: 25%;
-	 animation-delay: 4s;
+	 animation-delay: 1s;
 }
  .bg-bubbles li:nth-child(4) {
 	 left: 40%;
 	 width: 60px;
-	 height: 60px;
+	 height: 80px;
 	 animation-duration: 22s;
 	 background-color: rgba(255,255,255,0.25);
 }
@@ -161,28 +177,28 @@ body {
 }
  .bg-bubbles li:nth-child(6) {
 	 left: 80%;
-	 width: 120px;
+	 width: 110px;
 	 height: 120px;
 	 animation-delay: 3s;
 	 background-color: rgba(255,255,255,0.2);
 }
  .bg-bubbles li:nth-child(7) {
 	 left: 32%;
-	 width: 160px;
-	 height: 160px;
+	 width: 50px;
+	 height: 75px;
 	 animation-delay: 7s;
 }
  .bg-bubbles li:nth-child(8) {
 	 left: 55%;
 	 width: 20px;
-	 height: 20px;
+	 height: 30px;
 	 animation-delay: 15s;
 	 animation-duration: 40s;
 }
  .bg-bubbles li:nth-child(9) {
 	 left: 25%;
 	 width: 10px;
-	 height: 10px;
+	 height: 15px;
 	 animation-delay: 2s;
 	 animation-duration: 40s;
 	 background-color: rgba(255,255,255,0.3);
@@ -198,7 +214,7 @@ body {
 		 transform: translateY(0);
 	}
 	 100% {
-		 transform: translateY(-700px) rotate(600deg);
+		 transform: translateY(-900px) rotate(600deg);
 	}
 }
  @keyframes square {
@@ -206,7 +222,7 @@ body {
 		 transform: translateY(0);
 	}
 	 100% {
-		 transform: translateY(-700px) rotate(600deg);
+		 transform: translateY(-900px) rotate(600deg);
 	}
 }
  
