--- a/website/assets/style.css
+++ b/website/assets/style.css
@@ -55,18 +55,10 @@ body {
 	 align-items: center;
 
 }
- .wrapper.form-success .container h1 {
+ .wrapper.form-success .display-text {
 	 transform: translateY(85px);
 }
- .container {
-	max-width: 600px !important;
-	width: auto !important;
-	margin: 0 auto !important;
-	padding: 80px 0 !important;
-	text-align: center;
-	z-index: 1;	 
-}
- .container h1 {
+ .display-text {
 	 font-size: 40px;
 	 transition-duration: 1s;
 	 transition-timing-function: ease-in-put;
@@ -226,3 +218,13 @@ body {
 	}
 }
  
+
+@media only screen and (max-width: 768px) {
+	nav {
+		background-color: #46353566;
+	}
+
+	#nav-content>ul>li>a{
+		color: aliceblue;
+	}
+}
