--- a/website/app/app_assets/main.css
+++ b/website/app/app_assets/main.css
@@ -1,39 +1,11 @@
 body {
     margin: 0;
-    font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: .8125rem;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     line-height: 1.5385;
     color: #333;
     text-align: left;
     background-color: #eee
-}
-
-input {
-    border: none;
-    display: inline;
-    font-family: inherit;
-    font-size: inherit;
-    padding: none;
-    width: auto;
-}
-
-input:hover {
-    border: none;
-    display: inline;
-    font-family: inherit;
-    font-size: inherit;
-    padding: none;
-    width: auto;
-}
-
-input:focus {
-    border: none;
-    display: inline;
-    font-family: inherit;
-    font-size: inherit;
-    padding: none;
-    width: auto;
 }
 
 .mt-50 {
